<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:entries="@array/location_array"
        android:entryValues="@array/location_values"
        />

    <ListPreference
        android:key="@string/pref_tempunit_key"
        android:title="@string/pref_tempunit_title"
        android:defaultValue="@string/pref_tempunit_default"
        android:entries="@array/tempunit_array"
        android:entryValues="@array/tempunit_values"
        />

</PreferenceScreen>